--- a/autoAsinGrabber/manifest.json
+++ b/autoAsinGrabber/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "Triplemars Explorer",
-  "version": "1.0",
+  "version": "1.2",
   "description": "Triplemars Explorer!",
-  "permissions": [ "declarativeContent", "storage", "activeTab", "<all_urls>" ],
+  "permissions": [ "declarativeContent", "storage", "https://console.triplemars.com/*","https://*.amazon.co.uk/*", "https://*.amazon.com/*", "https://*.amazon.de/*", "https://*.amazon.ca/*" ],
   "background": {
     "scripts": [ "background.js", "event_script.js" ],
     "persistent": true
   },
   "content_scripts": [
     {
-      "matches": [ "<all_urls>" ],
+      "matches": [ "https://console.triplemars.com/*","https://*.amazon.co.uk/*", "https://*.amazon.com/*", "https://*.amazon.de/*", "https://*.amazon.ca/*" ],
       "js": [ "content.js" ]
     }
   ],
